err/jsondb.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jsondb'...
Compiling './lib/python3.5/site-packages/jsondb/__init__.py'...
***   File "./lib/python3.5/site-packages/jsondb/__init__.py", line 40
    print row
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jsondb/backends'...
Compiling './lib/python3.5/site-packages/jsondb/backends/sqlite3_backend.py'...
***   File "./lib/python3.5/site-packages/jsondb/backends/sqlite3_backend.py", line 214
    def insert_root(self, (root_type, value)):
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsondb/core.py'...
***   File "./lib/python3.5/site-packages/jsondb/core.py", line 197
    print parent_id, parent_type
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jsondb/pyPEG.py'...
***   File "./lib/python3.5/site-packages/jsondb/pyPEG.py", line 39
    word_regex = re.compile(ur"\w+")
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsondb-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
